iap popup button fix

--- a/DumplingJump/DU/Resources/nibs/BuyMoreStar.xib
+++ b/DumplingJump/DU/Resources/nibs/BuyMoreStar.xib
@@ -48,6 +48,7 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
+						<float key="IBUIAlpha">0.80000001192092896</float>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -64,7 +65,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrameSize">{299, 202}</string>
 								<reference key="NSSuperview" ref="26329562"/>
-								<reference key="NSNextKeyView" ref="22880200"/>
+								<reference key="NSNextKeyView" ref="102236742"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -78,7 +79,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{39, 20}, {226, 33}}</string>
 								<reference key="NSSuperview" ref="26329562"/>
-								<reference key="NSNextKeyView" ref="102236742"/>
+								<reference key="NSNextKeyView" ref="722919858"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -109,7 +110,7 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{31, 50}, {234, 44}}</string>
 								<reference key="NSSuperview" ref="26329562"/>
-								<reference key="NSNextKeyView" ref="722919858"/>
+								<reference key="NSNextKeyView" ref="22880200"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -259,22 +260,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">cancelButton</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="722919858"/>
-					</object>
-					<int key="connectionID">75</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">confirmButton</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="37432183"/>
-					</object>
-					<int key="connectionID">76</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">popupHolder</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="26329562"/>
@@ -288,6 +273,22 @@
 						<reference key="destination" ref="345918460"/>
 					</object>
 					<int key="connectionID">82</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">cancelButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="722919858"/>
+					</object>
+					<int key="connectionID">83</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">confirmButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="37432183"/>
+					</object>
+					<int key="connectionID">84</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -398,7 +399,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">82</int>
+			<int key="maxID">84</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
